<resources>
    <string name="app_name">EduScope</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_acc">Create an Account</string>
    <string name="img_logo">Logo</string>
    <string name="register_here_str">Don\'t have an account? \nRegister Here</string>
    <string name="login_here_str">Already Registered? \nLogin Here</string>
</resources>
